# othello

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  cmake_setup.ps1
source/: game_board.cpp  game_board.h  game_pos.h  globals.cpp  gui_board.h  gui_cfg.cpp  gui_cfg.h  gui_disk.h  gui_game_end.h  gui_piece.h  gui_window.h  main.cpp  utility.h
